--- a/aseets/css/styles.css
+++ b/aseets/css/styles.css
@@ -6,7 +6,17 @@
     box-sizing: border-box;
     background-color: rgb(0, 0, 0);
     font-family: 'Poppins', sans-serif;
-    color: white;  
+    color: white;
+}
+
+/* modificado  */
+
+body {
+    margin: 0;
+    padding: 0;
+    position: relative;
+    padding-bottom: 0.5em;
+    min-height: 90vh;
 }
 
 /* h1 {
@@ -34,7 +44,8 @@ header {
     background-position: center;
     background-size: contain;
     object-fit: cover;
-    height: calc(100vh - 4.37em);
+    /* height: calc(100vh - 4.7em); */
+    height: 91vh;
 }
 
 /* transition  */
@@ -45,7 +56,7 @@ header {
     overflow: hidden;
 }
 
-.gallery__picture::before  {
+.gallery__picture::before {
     content: " By Victor Anastasi";
     position: absolute;
     top: 0;
@@ -111,11 +122,11 @@ main {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-auto-rows: 26em;
-    grid-template-areas: 
-    "img1 img1 img2 img3"
-    "img1 img1 img4 img4"
-    "img5 img5 img6 img7"
-    "img5 img5 img8 img8";
+    grid-template-areas:
+        "img1 img1 img2 img3"
+        "img1 img1 img4 img4"
+        "img5 img5 img6 img7"
+        "img5 img5 img8 img8";
     gap: .8em;
 }
 
@@ -147,19 +158,19 @@ main {
     grid-area: img4;
 }
 
-.gallery__picture--g5{
+.gallery__picture--g5 {
     grid-area: img5;
 }
 
-.gallery__picture--g6{
+.gallery__picture--g6 {
     grid-area: img6;
 }
 
-.gallery__picture--g7{
+.gallery__picture--g7 {
     grid-area: img7;
 }
 
-.gallery__picture--g8{
+.gallery__picture--g8 {
     grid-area: img8;
 }
 
@@ -170,23 +181,28 @@ main {
         padding: .8em 0 .4em;
     }
 
+    .vic__video {
+
+        height: calc(90vh - 0.1em);
+    }
+
     .gallery__picture ::before {
         font-size: 1rem;
     }
 
     .gallery {
-        grid-template-columns: 1fr 1fr ;
-        grid-template-areas: 
-        "img1 img1"
-        "img1 img1"
-        "img2 img3"
-        "img4 img4"
-        "img4 img4"
-        "img5 img5"
-        "img5 img5"
-        "img6 img7"
-        "img8 img8"
-        "img8 img8"
+        grid-template-columns: 1fr 1fr;
+        grid-template-areas:
+            "img1 img1"
+            "img1 img1"
+            "img2 img3"
+            "img4 img4"
+            "img4 img4"
+            "img5 img5"
+            "img5 img5"
+            "img6 img7"
+            "img8 img8"
+            "img8 img8"
         ;
     }
 
@@ -199,10 +215,19 @@ main {
     }
 }
 
-/* boostrap */
+/* footer */
 
-.small {
+.foot {
+    position: absolute;
+    bottom: -10px;
     text-align: center;
-    margin-top: 400px;
+    width: 100%;
 }
 
+/* Modificando el About */
+
+/* main {
+
+   display: flex;
+   justify-content: center;
+} */
