--- a/aseets/css/styles.css
+++ b/aseets/css/styles.css
@@ -1,231 +1,164 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap");
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    background-color: rgb(0, 0, 0);
-    font-family: 'Poppins', sans-serif;
-    color: white;
-}
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  background-color: black;
+  font-family: 'Poppins', sans-serif;
+  color: white; }
 
 /* modificado  */
-
 body {
-    margin: 0;
-    padding: 0;
-    position: relative;
-    padding-bottom: 0.5em;
-    min-height: 90vh;
-}
+  margin: 0;
+  padding: 0;
+  position: relative;
+  padding-bottom: 0.5em;
+  min-height: 90vh; }
 
 /* h1 {
     text-align: center;
     margin-top: 25%;
 } */
-
 header {
-    display: flex;
-    justify-content: space-between;
-    text-align: center;
-    margin: 1em 10%;
-    font-size: 16px;
-}
+  display: flex;
+  justify-content: space-between;
+  text-align: center;
+  margin: 1em 10%;
+  font-size: 16px; }
 
 .vic__video {
-    position: relative;
-    z-index: 10;
-    right: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background-size: 100%;
-    background: #000;
-    background-position: center;
-    background-size: contain;
-    object-fit: cover;
-    /* height: calc(100vh - 4.7em); */
-    height: 91vh;
-}
+  position: relative;
+  z-index: 10;
+  right: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-size: 100%;
+  background: black;
+  background-position: center;
+  background-size: contain;
+  object-fit: cover;
+  /* height: calc(100vh - 4.7em); */
+  height: 91vh; }
 
 /* transition  */
-
 .gallery__picture {
-    position: relative;
-    cursor: pointer;
-    overflow: hidden;
-}
+  position: relative;
+  cursor: pointer;
+  overflow: hidden; }
 
 .gallery__picture::before {
-    content: " By Victor Anastasi";
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background-color: #5b40f3a6;
-    transform: scale(0);
-    transition: transform .6s;
-    color: fff;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 1.5em;
-}
+  content: " By Victor Anastasi";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: #5b40f3a6;
+  transform: scale(0);
+  transition: transform .6s;
+  color: fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.5em; }
 
 .gallery__picture:hover::before {
-    transform: scale(1) rotate(360deg);
-}
+  transform: scale(1) rotate(360deg); }
 
 /* end transition */
-
-
-
 a {
-    text-decoration: none;
-}
+  text-decoration: none; }
 
 .nav__links li {
-    display: inline-block;
-    padding: 0 1.25em;
-}
+  display: inline-block;
+  padding: 0 1.25em; }
 
 .logo {
-    cursor: pointer;
-}
+  cursor: pointer; }
 
 .nav__links li a {
-    transition: all 0.3s ease 0s;
-}
+  transition: all 0.3s ease 0s; }
 
 .nav__links li a:hover {
-    color: aqua;
-}
+  color: aqua; }
 
 main {
-    width: 100%;
-}
-
+  width: 100%; }
 
 /* grid mas responsive */
-
 .title {
-    text-align: center;
-    font-size: 2rem;
-    padding: .8em;
-
-}
+  text-align: center;
+  font-size: 2rem;
+  padding: .8em; }
 
 .gallery {
-    padding-bottom: 3em;
-    padding-top: 1em;
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-auto-rows: 26em;
-    grid-template-areas:
-        "img1 img1 img2 img3"
-        "img1 img1 img4 img4"
-        "img5 img5 img6 img7"
-        "img5 img5 img8 img8";
-    gap: .8em;
-}
+  padding-bottom: 3em;
+  padding-top: 1em;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-auto-rows: 26em;
+  grid-template-areas: "img1 img1 img2 img3" "img1 img1 img4 img4" "img5 img5 img6 img7" "img5 img5 img8 img8";
+  gap: .8em; }
 
 .gallery__picture {
-    position: relative;
-    cursor: pointer;
-    overflow: hidden;
-}
+  position: relative;
+  cursor: pointer;
+  overflow: hidden; }
 
 .gallery__img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
+  width: 100%;
+  height: 100%;
+  object-fit: cover; }
 
 .gallery__picture--g1 {
-    grid-area: img1;
-}
+  grid-area: img1; }
 
 .gallery__picture--g2 {
-    grid-area: img2;
-}
+  grid-area: img2; }
 
 .gallery__picture--g3 {
-    grid-area: img3;
-}
+  grid-area: img3; }
 
 .gallery__picture--g4 {
-    grid-area: img4;
-}
+  grid-area: img4; }
 
 .gallery__picture--g5 {
-    grid-area: img5;
-}
+  grid-area: img5; }
 
 .gallery__picture--g6 {
-    grid-area: img6;
-}
+  grid-area: img6; }
 
 .gallery__picture--g7 {
-    grid-area: img7;
-}
+  grid-area: img7; }
 
 .gallery__picture--g8 {
-    grid-area: img8;
-}
-
+  grid-area: img8; }
 
 @media screen and (max-width: 768px) {
-    .title {
-        font-size: 2rem;
-        padding: .8em 0 .4em;
-    }
-
-    .vic__video {
-
-        height: calc(90vh - 0.1em);
-    }
-
-    .gallery__picture ::before {
-        font-size: 1rem;
-    }
-
-    .gallery {
-        grid-template-columns: 1fr 1fr;
-        grid-template-areas:
-            "img1 img1"
-            "img1 img1"
-            "img2 img3"
-            "img4 img4"
-            "img4 img4"
-            "img5 img5"
-            "img5 img5"
-            "img6 img7"
-            "img8 img8"
-            "img8 img8"
-        ;
-    }
-
-    .gallery__picture::before {
-        font-size: 1rem;
-    }
-
-    header {
-        display: block;
-    }
-}
+  .title {
+    font-size: 2rem;
+    padding: .8em 0 .4em; }
+  .vic__video {
+    height: calc(90vh - 0.1em); }
+  .gallery__picture ::before {
+    font-size: 1rem; }
+  .gallery {
+    grid-template-columns: 1fr 1fr;
+    grid-template-areas: "img1 img1" "img1 img1" "img2 img3" "img4 img4" "img4 img4" "img5 img5" "img5 img5" "img6 img7" "img8 img8" "img8 img8"; }
+  .gallery__picture::before {
+    font-size: 1rem; }
+  header {
+    display: block; } }
 
 /* footer */
-
 .foot {
-    position: absolute;
-    bottom: -10px;
-    text-align: center;
-    width: 100%;
-}
+  position: absolute;
+  bottom: -10px;
+  text-align: center;
+  width: 100%; }
 
 /* Modificando el About */
-
 /* main {
 
    display: flex;
