--- a/aseets/scss/style.scss
+++ b/aseets/scss/style.scss
@@ -225,8 +225,8 @@ main {
 /* footer */
 
 .foot {
-    position: absolute;
-    bottom: -10px;
+    position: fixed;
+    bottom: 0vh;
     text-align: center;
     width: 100%;
 }
@@ -236,7 +236,7 @@ main {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    margin-top: 300px;
+    margin-top: 33vh;
     cursor: pointer;
     
 }
